<resources>
    <string name="app_name">Sky High</string>
    <string name="mainExerciseHint">Enter Exercise</string>
    <string name="mainWeightHint">Enter Weight</string>
    <string name="mainRepsHint">Enter Reps</string>
    <string name="mainSubmitButton">Submit</string>
    <string name="loginPasswordHint">Enter Password</string>
    <string name="loginUsernameHint">Enter Username</string>
    <string name="loginLoginButton">Login</string>
    <string name="mainCreateAccountButton">Create an account</string>
    <string name="loginInvalidCredentials">Invalid credentials</string>
    <string name="landingFlightsButton">Book a Flight</string>
    <string name="landingBookedFlightsButton">Booked Flights</string>
    <string name="landingAdminButton">Admin</string>
    <string name="landingCancelFlightsButton">Cancel Flights</string>
    <string name="landingSignOutButton">Sign Out</string>
    <string name="signUpRepeatPassword">Repeat Password</string>
    <string name="signUpSignUpButton">Create Account</string>
    <string name="signUpHeader">Sign Up</string>
    <string name="adminMenuHeader">Admin Menu</string>
    <string name="adminMenuManageFlightsButton">Manage Flights</string>
    <string name="adminMenuManageUsersButton">Manage Users</string>
    <string name="goBackButton">Go back</string>
    <string name="bookFlightHeader">Book a Flight</string>
    <string name="bookFlightButton">Book Flight</string>
    <string name="manageBookedFlightsHeader">Manage Booked Flights</string>
    <string name="cancelBookedFlightButton">Cancel Flight</string>
    <string name="adminManageFlightsHeader">Manage Flights</string>
    <string name="adminAddFlightButton">Add Flight</string>
    <string name="adminDeleteFlightButton">Delete Flight</string>
    <string name="adminManageUsersHeader">Manage Users</string>
    <string name="adminDeleteUserButton">Delete User</string>
    <string name="adminAddFlightHeader">Add Flight</string>
    <string name="addFlightDestinationHint">Enter Destination</string>
    <string name="addFlightOriginHint">Enter Origin</string>
    <string name="adminAddFlightButtonText">Add Flight</string>
    <string name="departureDateHint">Departure Date</string>
    <string name="departureTimeHint">Departure Time</string>
    <string name="arrivalDateHint">Arrival Date</string>
    <string name="arrivalTimeHint">Arrival Time</string>
</resources>
