<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddFlightActivity"
    android:background="@color/mediumBlue">


    <TextView
        android:id="@+id/adminAddFlightHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/adminAddFlightHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/lighterBlue"/>

    <EditText
        android:id="@+id/addFlightOrigin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addFlightOriginHint"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@+id/adminAddFlightHeader" />

    <EditText
        android:id="@+id/addFlightDestination"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addFlightDestinationHint"
        android:inputType="textCapWords"
        app:layout_constraintStart_toEndOf="@+id/addFlightOrigin"
        app:layout_constraintTop_toBottomOf="@+id/adminAddFlightHeader" />

    <EditText
        android:id="@+id/addFlightDepartureDate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/departureDateHint"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/addFlightOrigin" />

    <EditText
        android:id="@+id/addFlightDepartureTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/departureTimeHint"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/addFlightDepartureDate"
        app:layout_constraintTop_toBottomOf="@+id/addFlightDestination" />
    <EditText
        android:id="@+id/addFlightArrivalDate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/arrivalDateHint"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/addFlightDepartureDate" />
    <EditText
        android:id="@+id/addFlightArrivalTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/arrivalTimeHint"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/addFlightArrivalDate"
        app:layout_constraintTop_toBottomOf="@+id/addFlightDepartureTime" />

    <Button
        android:id="@+id/adminAddFlightButton"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:text="@string/adminAddFlightButtonText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFlightArrivalDate"
        app:backgroundTint="@color/orange"/>

    <Button
        android:id="@+id/adminAddFlightGoBackButton"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/goBackButton"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/adminAddFlightButton"
        android:layout_toLeftOf="@+id/adminAddFlightButton"
        app:layout_constraintTop_toBottomOf="@+id/addFlightArrivalDate"
        app:backgroundTint="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>