<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenuActivity"
    android:background="@color/mediumBlue">


    <TextView
        android:id="@+id/adminMenuHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/adminMenuHeader"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/lighterBlue"/>

    <Button
        android:id="@+id/adminMenuManageFlightsButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/adminMenuManageFlightsButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminMenuHeader"
        app:backgroundTint="@color/orange"/>

    <Button
        android:id="@+id/adminMenuManageUsersButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/adminMenuManageUsersButton"
        android:textSize="18sp"
        app:backgroundTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminMenuManageFlightsButton" />

    <Button
        android:id="@+id/adminMenuGoBackButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/goBackButton"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminMenuManageUsersButton" />
</androidx.constraintlayout.widget.ConstraintLayout>