<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminManageFlightsActivity"
    android:background="@color/mediumBlue">


    <TextView
        android:id="@+id/manageFlightsHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/adminManageFlightsHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/lighterBlue"/>

    <ListView
        android:id="@+id/manageFlightsFlightList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageFlightsHeader"
        tools:ignore="MissingConstraints">
    </ListView>

    <Button
        android:id="@+id/adminAddFlightButton"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:text="@string/adminAddFlightButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageFlightsFlightList"
        app:backgroundTint="@color/orange"/>

    <Button
        android:id="@+id/adminDeleteFlightButton"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:text="@string/adminDeleteFlightButton"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/adminAddFlightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageFlightsFlightList"
        app:backgroundTint="@color/red"/>

    <Button
        android:id="@+id/adminManageFlightsGoBackButton"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/goBackButton"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/adminAddFlightButton"
        android:layout_toLeftOf="@+id/adminAddFlightButton"
        app:layout_constraintTop_toBottomOf="@+id/manageFlightsFlightList"
        app:backgroundTint="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>