<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageBookedFlightsActivity"
    android:background="@color/mediumBlue">


    <TextView
        android:id="@+id/manageBookedFlightsHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/manageBookedFlightsHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/lighterBlue"/>

    <ListView
        android:id="@+id/manageBookedFlightsFlightList"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageBookedFlightsHeader"
        tools:ignore="MissingConstraints">
    </ListView>

    <Button
        android:id="@+id/cancelBookedFlightButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:text="@string/cancelBookedFlightButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageBookedFlightsFlightList"
        app:backgroundTint="@color/orange"/>

    <Button
        android:id="@+id/bookedFlightsGoBackButton"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/goBackButton"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelBookedFlightButton"
        android:layout_toLeftOf="@+id/cancelBookedFlightButton"
        app:layout_constraintTop_toBottomOf="@+id/manageBookedFlightsFlightList"
        app:backgroundTint="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>